# change-detection-bench

./: .gitignore  README.md  cd-bench_variantes_architecturales.md  docker-compose.yml  pyproject.toml
configs/: loss_hparams.json  settings.toml.example
docs/: baseline_conv_architecture.md
local-dev-tools/: model-search.py
scripts/: eda.py  extract_features.py  run.py
src/: config.py
src/cd_bench/: config.py
src/cd_bench/cli/: __init__.py  bench.py  eda.py  eval.py  extract.py  mlflow_admin.py  search.py  show.py  train.py  tune.py
src/cd_bench/data/: feature_dataset.py  mask_mapping.py  paths.py  raw_dataset.py  splits.py
src/cd_bench/inference/: predict.py  visualize.py
src/cd_bench/models/: cd_model.py
src/cd_bench/models/decoders/: __init__.py  baseline_conv.py  fusion.py  query_decoder.py
src/cd_bench/models/encoders/: __init__.py  base.py  conv_like.py  hier_seq_like.py  vit_like.py  vit_reg_like.py
src/cd_bench/training/: hparams_store.py  losses.py  trainer.py
src/cd_bench/utils/: io.py
src/data/: feature_dataset.py
src/models/: baseline.py
src/training/: metrics.py  trainer.py
src/utils/: device.py  io.py
