[project]
name = "cd-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "mlflow",
    "numpy",
    "pandas",
    "pillow",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
